--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>HTML attributes</title>
+  </head>
+  <body>
+    <h1>Attributes</h1>
+    <h2>href attributes</h2>
+    <p>This is an attribute used to link elements</p>
+    <p>
+      In this course we are learning HTML from
+      <a href="https://flatironschool.com">Flatiron School</a> and so far we are
+      looking into href attributes
+    </p>
+  </body>
+</html>
